[package]
name = "kv-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
actix-session = {version = "0.7.2", features = ["cookie-session"]}
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.86"
oauth2 = "4.2.3"
eyre = "0.6.8"
env_logger = "0.9.0"
log = "0.4.17"
